<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_graph_quest</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ruichao.wu@ipa.fraunhofer.de">nuc2</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>qt_dotgraph</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-pydot</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
